# sphinx_bib_domain

./: .envrc  .lenvs  .readthedocs.yaml  .related  .venv  NEWS.rst  VERSION.toml  _changes  architecture.md  checklist.md  pyproject.toml  pyrightconfig.json  tox.toml
.github/workflows/: python-publish.yml
.tasks/: todos.org
sphinx_bib_domain/: __init__.py  _interface.py  bib_domain.py  htmltoc.py  index.rst  parser.py
sphinx_bib_domain/__tests/: test_bib_domain.py
sphinx_bib_domain/_docs/: conf.py
sphinx_bib_domain/builder/: bib_html_builder.py
sphinx_bib_domain/builder/__tests/: test_bib_html_builder.py
sphinx_bib_domain/directives/: bib_entry.py
sphinx_bib_domain/directives/__tests/: test_bib_entry.py
sphinx_bib_domain/indices/: __init__.py  author.py  institution.py  journal.py  publisher.py  series.py  tag.py
sphinx_bib_domain/roles/: __init__.py  author.py  doi.py  institution.py  journal.py  publisher.py  series.py  tag.py
sphinx_bib_domain/util/: __init__.py
